Changes for 1.0beta13:

 - added support of macro {HOSTNAME}, removed support of
 %s (Alexei)
 - added support of macros {DATE} and {TIME} in alerts
 (Alexei)
 - fixed selection of multiplier in item definition form
 (Alexei)
 - support for 'icmppingsec' (Alexei)
 - added support of symbol '-' in trigger expressions
 (Alexei)
 - added information about table 'trends' to 'Status of
 Zabbix' screen (Alexei)
 - transparency for graphs on GD 2.x platforms (Alexei)
 - added timestamp and header to maps (Alexei)
 - fixes for screens.php (Alexei)
 - fixes for screenedit.php (Alexei)
 - added parameter DisablePinger (Alexei)
 - correct processing of RCPT TO responses from SMTP servers
 (Alexei)
 - correct processing of unsupported internal checks (Alexei)
 - processing of DB stopped situations for MySQL (Alexei)
 - housekeeper to delete hosts_groups entries (Alexei)
 - deleted host to be renamed to "<host> [DELETED]"
 (Alexei)
 - added function now() (Alexei)
 - fixed action maintenance screen (Alexei)
 - redesigned availablity chart (Alexei)
 - support for zabbix[trends] (Alexei)
 - added table 'trends' (Alexei)
 - cosmetic changes for IT Services screen (Alexei)
 - change of color schema for SLA graphs and report (Alexei)
 - redesigned IT Service availability chart (Alexei)
 - fix for get_last_service_value(). Thanks to Sebastien
 "Slix" Linard. (Alexei)
 - fix for chart_sla.php. Thanks to Sebastien "Slix"
 Linard. (Alexei)
 - proper timeout handling for SNMP connect (Alexei)

Changes for 1.0beta12:

 - fixed add services (Alexei)
 - fixed simple *_perf checks (Alexei)
 - data.sql was modified to include usrgrp records (Alexei)
 - fixed update of special items 'status'. Thanks to
 Sebastien "Slix" Linard. (Alexei) 
 - fixes for graph time navigation (Alexei)
 - fixed processing of trapped values, fixed pinger. Thanks
 to Sebastien "Slix" Linard. (Alexei) 
 - fixed UserParameter when it replaces existing one. Thanks to
 Sebastien "Slix" Linard. (Alexei) 