@@ -1,6 +1,5 @@
 1.0beta12:
 
- - no way to delete or rename host group
  - add zabbix[unixtime] and lastupdate() to get rid of nodata()
  - check return code for alert scripts
  - zabbix_agentd to support processor load, swap[*] and memory[*] onder AIX
