@@ -2725,6 +2725,20 @@ where h.hostid=i.hostid and i.itemid=f.itemid and f.triggerid=$triggerid";
 		}
 	}
 
+	function	update_host_groups_by_groupid($groupid,$hosts)
+	{
+		$count=count($hosts);
+
+		$sql="delete from hosts_groups where groupid=$groupid";
+		DBexecute($sql);
+
+		for($i=0;$i<$count;$i++)
+		{
+			$sql="insert into hosts_groups (hostid,groupid) values (".$hosts[$i].",$groupid)";
+			DBexecute($sql);
+		}
+	}
+
 	function	update_host_groups($hostid,$groups)
 	{
 		$count=count($groups);
@@ -2737,6 +2751,38 @@ where h.hostid=i.hostid and i.itemid=f.itemid and f.triggerid=$triggerid";
 			$sql="insert into hosts_groups (hostid,groupid) values ($hostid,".$groups[$i].")";
 			DBexecute($sql);
 		}
+	}
+
+	function	add_host_group($name,$hosts)
+	{
+		global	$ERROR_MSG;
+
+//		if(!check_right("Host","A",0))
+//		{
+//			$ERROR_MSG="Insufficient permissions";
+//			return 0;
+//		}
+
+		$sql="select * from groups where name='$name'";
+		$result=DBexecute($sql);
+		if(DBnum_rows($result)>0)
+		{
+			$ERROR_MSG="Group '$name' already exists";
+			return 0;
+		}
+
+		$sql="insert into groups (name) values ('$name')";
+		$result=DBexecute($sql);
+		if(!$result)
+		{
+			return	$result;
+		}
+		
+		$groupid=DBinsert_id($result,"groups","groupid");
+
+		update_host_groups_by_groupid($groupid,$hosts);
+
+		return $result;
 	}
 
 	function	add_user_group($name,$users)
@@ -2767,6 +2813,36 @@ where h.hostid=i.hostid and i.itemid=f.itemid and f.triggerid=$triggerid";
 		$usrgrpid=DBinsert_id($result,"usrgrp","usrgrpid");
 
 		update_user_groups($usrgrpid,$users);
+
+		return $result;
+	}
+
+	function	update_host_group($groupid,$name,$users)
+	{
+		global	$ERROR_MSG;
+
+//		if(!check_right("Host","U",0))
+//		{
+//			$ERROR_MSG="Insufficient permissions";
+//			return 0;
+//		}
+
+		$sql="select * from groups where name='$name' and groupid<>$groupid";
+		$result=DBexecute($sql);
+		if(DBnum_rows($result)>0)
+		{
+			$ERROR_MSG="Group '$name' already exists";
+			return 0;
+		}
+
+		$sql="update groups set name='$name' where groupid=$groupid";
+		$result=DBexecute($sql);
+		if(!$result)
+		{
+			return	$result;
+		}
+		
+		update_host_groups_by_groupid($groupid,$users);
 
 		return $result;
 	}
@@ -3113,6 +3189,16 @@ where h.hostid=i.hostid and i.itemid=f.itemid and f.triggerid=$triggerid";
 		$sql="delete from users_groups where usrgrpid=$usrgrpid";
 		DBexecute($sql);
 		$sql="delete from usrgrp where usrgrpid=$usrgrpid";
+		return DBexecute($sql);
+	}
+
+	function	delete_host_group($groupid)
+	{
+		global	$ERROR_MSG;
+
+		$sql="delete from hosts_groups where groupid=$groupid";
+		DBexecute($sql);
+		$sql="delete from groups where groupid=$groupid";
 		return DBexecute($sql);
 	}
 
@@ -3852,9 +3938,9 @@ where h.hostid=i.hostid and i.itemid=f.itemid and f.triggerid=$triggerid";
 
 		show_table2_v_delimiter();
 		echo "<form method=\"get\" action=\"hosts.php\">";
-		if(isset($usrgrpid))
+		if(isset($HTTP_GET_VARS["groupid"]))
 		{
-			echo "<input name=\"groupid\" type=\"hidden\" value=\"$groupid\" size=8>";
+			echo "<input name=\"groupid\" type=\"hidden\" value=\"".$HTTP_GET_VARS["groupid"]."\" size=8>";
 		}
 		echo "Group name";
 		show_table2_h_delimiter();
@@ -3890,7 +3976,7 @@ where h.hostid=i.hostid and i.itemid=f.itemid and f.triggerid=$triggerid";
 
 		show_table2_v_delimiter2();
 		echo "<input class=\"button\" type=\"submit\" name=\"register\" value=\"add group\">";
-		if(isset($HTTP_GET_VARS["usrgrpid"]))
+		if(isset($HTTP_GET_VARS["groupid"]))
 		{
 			echo "<input class=\"button\" type=\"submit\" name=\"register\" value=\"update group\">";
 			echo "<input class=\"button\" type=\"submit\" name=\"register\" value=\"delete group\" onClick=\"return Confirm('Delete selected group?');\">";
